# webinar

./: .gitignore  dev_requirements.txt  pyproject.toml  requirements.txt
configs/: example.config.toml
deploy/: webinar.target  webinar_bm.service  webinar_tgbot.service
src/application/: config.py
src/application/interfaces/: uow.py
src/application/interfaces/repository/: admin.py  homework.py  stats.py  user.py  webinar.py
src/application/schemas/: types.py
src/application/schemas/dto/: admin.py  homework.py  stats.py  user.py  webinar.py
src/application/schemas/enums/: __init__.py  direction_type.py  homework.py
src/infrastructure/cache/: __init__.py  adapter.py
src/infrastructure/google_sheets/: adapter.py
src/infrastructure/repositories/: admin.py  base.py  homework.py  stats.py  uow.py  user.py  webinar.py
src/presentation/broker_message/: __main__.py  decoder.py  di.py
src/presentation/broker_message/handlers/: mailing.py  routing.py  update_google_sheets.py
src/presentation/tgbot/: __main__.py  states.py
src/presentation/tgbot/filtering/: __init__.py  check_user_is_admin.py  check_user_registring.py
src/presentation/tgbot/handling/: routing.py
src/presentation/tgbot/keyboard/: __init__.py  callback_data.py  inline.py  keyboard.py  reply.py
src/presentation/tgbot/middlewaring/: is_super_admin.py  uow.py
src/presentation/tgbot/utils/: create.py  setup.py
src/webinar/: config.py
src/webinar/application/: config.py  exceptions.py
src/webinar/application/dto/: admin.py  button.py  common.py  homework.py  stats.py  user.py  webinar.py
src/webinar/application/interactions/: base.py
src/webinar/application/interfaces/: delete_message.py  (+1 more)
src/webinar/domain/: types.py
src/webinar/infrastructure/: word_range.py
src/webinar/presentation/: annotaded.py  inject.py
(+152 files in other folders)
