[build-system]
requires = ['setuptools==68.1.2', ]
build-backend = 'setuptools.build_meta'

[project]
name = "webinar"
version = "1.0.0"
description = "Webinar Applcation"
requires-python = "~=3.10.11"
dependencies = [
    'psycopg[binary]==3.1.16',
    'types-cachetools==5.3.0.7',
    'gspread-asyncio==1.9.0',
    'types-toml==0.10.8.7',
    'faststream==0.3.11',
    'cachetools==5.3.2',
    'adaptix==3.0.0b1',
    'orjson==3.9.10',
    'aiogram==3.3.0',
    'nats-py==2.6.0',
    'toml==0.10.2',
    'mypy==1.8.0',
    'ruff==0.1.9',
    'lz4==4.3.2',
]


[project.scripts]
webinar-bot = "webinar.presentation.cli.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[[project.authors]]
name = "Ivan Kirpichnikov"
email = "mmssvvvv570@gmail.com"

[tool.mypy]
ignore_missing_imports = true


